--- a/package.json
+++ b/package.json
@@ -1,64 +1,22 @@
 {
-  "name": "a",
-  "private": true,
+  "name": "example-with-tailwindcss",
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest run",
-    "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix",
-    "deploy": "npm run build && wrangler deploy",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:pull": "drizzle-kit pull",
-    "db:studio": "drizzle-kit studio"
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
   },
   "dependencies": {
-    "@cloudflare/vite-plugin": "^1.13.8",
-    "@faker-js/faker": "^10.0.0",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/match-sorter-utils": "^8.19.4",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-form": "^1.0.0",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/react-table": "^8.21.2",
-    "@tanstack/router-plugin": "^1.132.0",
-    "drizzle-kit": "^0.31.8",
-    "drizzle-orm": "^0.45.0",
-    "lucide-react": "^0.544.0",
-    "pg": "^8.16.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.11"
+    "@solidjs/router": "^0.15.0",
+    "@solidjs/start": "^1.1.0",
+    "solid-js": "^1.9.5",
+    "vinxi": "^0.5.7"
   },
   "devDependencies": {
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@tanstack/eslint-config": "^0.3.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.2",
-    "@types/pg": "^8.15.6",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "dotenv": "^16.0.0",
-    "jsdom": "^27.0.0",
-    "prettier": "^3.5.3",
-    "tsx": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^7.1.7",
-    "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0",
-    "wrangler": "^4.40.3"
+    "@tailwindcss/vite": "^4.0.7",
+    "tailwindcss": "^4.0.7"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
