--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^24.7.0",
-    "drizzle-kit": "^0.22.7"
+    "drizzle-kit": "^0.31.8"
   },
   "dependencies": {
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
-    "better-sqlite3": "^11.0.0",
-    "drizzle-orm": "^0.31.2",
+    "better-auth": "^1.4.7",
+    "drizzle-orm": "^0.41.0",
     "solid-js": "^1.9.5",
     "vinxi": "^0.5.7"
   },
